[Composite.Media.YouTubeChannel] 2.0.5: z-index fix

--- a/Composite.Media.YouTubeChannel/Package/Frontend/Composite/Media/YouTubeChannel/lightbox-css/html-lightbox.css
+++ b/Composite.Media.YouTubeChannel/Package/Frontend/Composite/Media/YouTubeChannel/lightbox-css/html-lightbox.css
@@ -13,9 +13,13 @@
 
 #htmlCenter, #htmlBottomContainer {
 	position: absolute;
-	z-index: 9999;
+	z-index: 9000;
 	overflow: hidden;
 	background-color: #fff;
+}
+
+#htmlCenter {
+	z-index: 9999;
 }
 
 .htmlLoading {
